# OneTML

./: README.md
src/: CMakeLists.txt  main.cpp  test.js
src/components/: RawMetaElement.cpp  RawMetaElement.h  Schema.cpp  Schema.h  Template.cpp  Template.h
src/config/: Path.cpp  Path.h  Resolver.cpp  Resolver.h
src/configs/: Configuration.cpp  Configuration.h
src/configuration_example/: onetml.config.json
src/environment/: ObjectTML.cpp  ObjectTML.h  dynamic_types.h
src/system/: ErrorGenerator.cpp  ErrorGenerator.h  utils.h
